--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -30,3 +30,14 @@
     transform: rotate(360deg);
   }
 }
+
+label {
+  width:180px;
+  clear:left;
+  text-align:right;
+  padding-right:10px;
+}
+
+input, label {
+  float:left;
+}
