Added backdrop prop in PopupBox component + Renamed CreateAccountForm component ==> RegistrationForm + Renamed create-accout-form.css ==> registration-form

--- a/frontend/src/css/registration-form.css
+++ b/frontend/src/css/registration-form.css
@@ -1,5 +1,5 @@
 /*
-create-account-form.css is used for the CreateAccountForm.jsx styles that cannot be added inside a const
+registration-form.css is used for the RegistrationForm.jsx styles that cannot be added inside a const
 */
 
 .names-grid {
