trying a new color for danger buttons

--- a/frontend/src/css/cat-theme.css
+++ b/frontend/src/css/cat-theme.css
@@ -245,6 +245,6 @@ p {
 }
 
 .btn-danger:disabled {
-  background-color: #db3336;
-  border-color: #db3336;
+  background-color: #923534;
+  border-color: #923534;
 }
