--- a/frontend/src/css/registration-form.css
+++ b/frontend/src/css/registration-form.css
@@ -5,17 +5,19 @@ registration-form.css is used for the RegistrationForm.jsx styles that cannot be
 .names-grid {
   display: -ms-grid;
   display: grid;
+  width: 504px;
 }
 
 .names-grid-first-name {
   -ms-grid-column: 1;
   grid-column: 1;
-  margin-right: 14px;
+  width: 252px;
 }
 
 .names-grid-last-name {
   -ms-grid-column: 2;
   grid-column: 2;
+  width: 252px;
 }
 
 .valid-field {
