--- a/frontend/src/css/registration-form.css
+++ b/frontend/src/css/registration-form.css
@@ -17,7 +17,8 @@ registration-form.css is used for the RegistrationForm.jsx styles that cannot be
 .names-grid-last-name {
   -ms-grid-column: 2;
   grid-column: 2;
-  width: 252px;
+  width: 240px;
+  margin-left: 12px;
 }
 
 .valid-field {
