Added privacy notice section: created the checkbox, created the description paragraph, created the link with the popup box (content = TODO)

--- a/frontend/src/css/registration-form.css
+++ b/frontend/src/css/registration-form.css
@@ -21,6 +21,23 @@ registration-form.css is used for the RegistrationForm.jsx styles that cannot be
   margin-left: 12px;
 }
 
+.privacy-notice-grid {
+  display: -ms-grid;
+  display: grid;
+}
+
+.privacy-notice-grid-checkbox {
+  -ms-grid-column: 1;
+  grid-column: 1;
+}
+
+.privacy-notice-grid-description {
+  -ms-grid-column: 2;
+  grid-column: 2;
+  width: 450px;
+  margin-left: 12px;
+}
+
 .valid-field {
   border: 1px solid #00565e;
 }
