--- a/frontend/src/css/lib/react-super-select.css
+++ b/frontend/src/css/lib/react-super-select.css
@@ -116,15 +116,15 @@
 .r-ss-trigger .r-ss-selection-clear {
   top: 13px;
   left: 10px;
-  opacity: 0.25;
   position: absolute;
   width: 14px;
   height: 14px;
   padding: 0;
-  color: #333;
-  background-color: #ccc;
+  color: #ffffff;
+  background-color: #3a3a3a;
   font-size: 10px;
-  border: 1px solid #333;
+  font-weight: bold;
+  border: 1px solid #3a3a3a;
   cursor: pointer;
   z-index: 1;
   -webkit-border-radius: 2px 2px 2px 2px;
@@ -161,7 +161,7 @@
   border-color: transparent transparent #424242 transparent;
 }
 .r-ss-trigger .carat.down {
-  bottom: 4px;
+  bottom: 8px;
   border-color: #424242 transparent transparent transparent;
 }
 .r-ss-search-aria-label {
@@ -367,17 +367,17 @@
   -webkit-user-select: none;
 }
 .r-ss-tag .r-ss-tag-remove {
-  top: 2px;
+  top: 4px;
   right: 2px;
-  opacity: 0.25;
   position: absolute;
   width: 14px;
   height: 14px;
   padding: 0;
-  color: #333;
-  background-color: #ccc;
+  color: #ffffff;
   font-size: 10px;
-  border: 1px solid #333;
+  font-weight: bold;
+  background-color: #3a3a3a;
+  border: 1px solid #3a3a3a;
   cursor: pointer;
   z-index: 1;
   -webkit-border-radius: 2px 2px 2px 2px;
